tests/specs/ecosystem/yu/bar/0_0_1.test
yu/bar/0.0.1
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /packages/bar/index.ts:12:11
   | 
12 |   install (options) {
   |           ^^^^^^^^^^^
   | 
13 |     console.log('bar installed!', options, this, new Bar())
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | 
14 |   }
   | ^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /packages/bar/index.ts:12:12
   | 
12 |   install (options) {
   |            ^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


